alb.tf
resource "aws_alb_target_group" "web_tg" {
  name     = "web-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
}

resource "aws_alb_target_group_attachment" "web_tg_attachment" {
  target_group_arn = aws_alb_target_group.web_tg.arn
  target_id        = aws_instance.web_server.id
  port             = 80
}

resource "aws_alb" "web_alb" {
  name               = "web-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.tf_security_grp.id]
  subnets            = [aws_subnet.main_public_subnet_a.id, aws_subnet.main_public_subnet_b.id]

  tags = {
    "Name" = "Web ALB"
  }
}

resource "aws_alb_listener" "web_alb_listener" {
  load_balancer_arn = aws_alb.web_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.web_tg.arn
  }
}
